@@ -1,4 +1,16 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA256
+
+DIST thor-0.14.0.gem 70656 RMD160 3b5b31bb8c6e4fcd5b79bafd59d7bbb84ef6482d SHA1 28209b2dd3f5d03210c649bed7efaed46db78083 SHA256 41e64fd5fc06a751200df72c6c0cb88a9cf67b0a4e301da6d4b54214c8efbf84
 DIST thor-0.9.8.gem 15872 RMD160 0dd052a7a511b5f7aaffd1a617e4fd106c3bcdc3 SHA1 cf2f9e024473e8d804fad7688d2ada88396f956e SHA256 a8f3d8e6e811594eb04e0547ca1c06065a6963440dbbdec8607c5ce8fdc16dd0
+EBUILD thor-0.14.0.ebuild 875 RMD160 ec463b869287907d5cd6debafe0611ec7848c42d SHA1 ba3b96594484c07b4484a91ee10bc836f176840a SHA256 64f7a01ef176a8dfdebc3bfa74501579113920cb8c815d23a557d91d7acc157d
 EBUILD thor-0.9.8.ebuild 305 RMD160 03ed27d5d06bbc18b606541beb2107c35c440d78 SHA1 d33d6fb69e727dd513a222933e28008eea9a6f87 SHA256 40903ff1d579d0f49441e08790eefbe1dd9a0e3f23e5825990ffb4cba68c0f7a
-MISC ChangeLog 265 RMD160 2c72eaa955bd5e75eead8f934dd44cf6abee1c89 SHA1 338ad626ed8f83e00baa6a4c06db44d14de22f0e SHA256 e90e1d770e45101599b67d06e92236d4fcef8b20cf34ff0abdaae442037baae6
+MISC ChangeLog 381 RMD160 a1ff87224a2d15e479ae43392b86d8c38256abb5 SHA1 10b45f5e0f480e17b4b28f481a3c13271a17ec02 SHA256 2a2d74e67de13510b17c77b34197452dd2ff38d9a89289f11352c0e3d416f94b
 MISC metadata.xml 159 RMD160 eb364108353c7843cf1c01fba92129aaa46a0334 SHA1 0734f4c292968932afc57d0aa3a681c0b75b7bfc SHA256 abab7965b1f41e0acf6b54c554945c1c9fa35b5afab848d784dc58c298bc4679
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.16 (GNU/Linux)
+
+iF4EAREIAAYFAkyA6tEACgkQZihJkut28Su8uQD+LCbafymapLqMnCrkGSNpojbO
+Y98ykcKr2WDuU/1CabABAIvi20suSqhvnjNqoFGvgY4d2fsdanviVfOsdZisg/xE
+=ufYn
+-----END PGP SIGNATURE-----
